# Cloud-Automation

aws_agent/: Dockerfile  app.py  cli.py  pyproject.toml  requirements.txt  serve.py
aws_agent/agents/: aws_agent.py
aws_agent/prompts/: aws_agent_prompt.py
aws_agent/tools/: __init__.py  aws_cli_create_tool.py  aws_cli_delete_tool.py  aws_cli_describe_tool.py  aws_cli_get_tool.py  aws_cli_update_tool.py  base_aws_cli_tool.py
aws_node/: Dockerfile  cli.py  config.yaml  draw_graph.py  main.py  pyproject.toml  requirements.txt  serve.py
aws_node/execute/: __init__.py  agent.py  router.py  system_prompt.py  utils.py
aws_node/general_conversation/: __init__.py  agent.py  system_prompt.py
aws_node/plan/: __init__.py  agent.py  router.py  system_prompt.py
aws_node/schemas/: cli_command_schema.py  cli_parameter_schema.py  supervisor_output_schema.py
aws_node/supervisor/: __init__.py  agent.py  router.py  system_prompt.py
aws_node/tools/: __init__.py  aws_cli_get_tool.py  base_aws_cli_tool.py  execute_aws_command.py
azure-agent/: azure_tool.py  graph.py  main.py  pyproject.toml
